--- a/templates/editrestaurant.html
+++ b/templates/editrestaurant.html
@@ -12,21 +12,18 @@
 <p>Description:<br>
 <textarea name="description" rows="10" cols="80">{{ restaurant.description }}</textarea></p>
 <p>Tags:<br>
-{% if restaurant_classes %}
 {% for class in classes %}
+{% set checked = false %}
 {% for entry in restaurant_classes %}
 {% if class.id == entry.class_id %}
-<input type="checkbox" name="tag" value="{{ class.id }}" checked> {{ class.name }} <br>
-{% else %}
-<input type="checkbox" name="tag" value="{{ class.id }}"> {{ class.name }} <br>
+{% set checked = true %}
 {% endif %}
 {% endfor %}
+<input type="checkbox" name="tag" value="{{ class.id }}"
+{% if checked or (class.id in restaurant.current_class_ids) %}checked{% endif %}>
+{{ class.name }} <br>
 {% endfor %}
-{% else %}
-{% for class in classes %}
-<input type="checkbox" name="tag" value="{{ class.id }}"> {{ class.name }} <br>
-{% endfor %}
-{% endif %}
+</p>
 <input type="hidden" name="id" value="{{ restaurant.id }}">
 <br>
 <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
